--- a/Kubernetes/awkwob-service.yml
+++ b/Kubernetes/awkwob-service.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: valaxy-service
+  name: awkwob-service
   labels:
-    app: valaxy-devops-project
+    app: awkwob-devops-project
 spec:
   selector:
-    app: valaxy-devops-project
+    app: awkwob-devops-project
   type: LoadBalancer
   ports:
     - port: 8080
