--- a/Kubernetes/awkwob-deploy.yml
+++ b/Kubernetes/awkwob-deploy.yml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: awkwob-deployment
+  name: devops-awkwob-deployment
 spec:
   selector:
     matchLabels:
-      app: awkwob-devops-project
+      app: devops-awkwob-project
   replicas: 2 # tells deployment to run 2 pods matching the template
   strategy:
     type: RollingUpdate
@@ -16,10 +16,10 @@ spec:
   template:
     metadata:
       labels:
-        app: awkwob-devops-project
+        app: devops-awkwob-project
     spec:
       containers:
-      - name: awkwob-devops-project
+      - name: devops-awkwob-project
         image: thunder005/simple-devops-demo
         imagePullPolicy: Always
         ports:
